<resources>
    <string name="app_name">Kick Counter Ex</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="complete">Complete</string>
    <string name="reset">Reset</string>
    <string name="kicks">Kicks</string>
    <string name="first">First</string>
    <string name="last">Last</string>
    <string name="count_progress_label">Kick counting is in progress...</string>
    <string name="click_on_foot_icon_on_first_click">Click on foot icon on first click</string>
    <string name="kicks_history">Kicks History</string>
</resources>