<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.KickFragment">

    <LinearLayout
        android:id="@+id/kick_top_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#612196F3"
        android:padding="8dp">

        <TextView
            android:id="@+id/kick_text_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_on_foot_icon_on_first_click"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <com.mikhaellopez.circularprogressbar.CircularProgressBar
                android:id="@+id/circularProgressBar"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                app:cpb_background_progressbar_color="#727378"
                app:cpb_progress="50"
                app:cpb_progress_direction="to_right"
                app:cpb_progress_max="100"
                app:cpb_progressbar_color="@color/colorPrimary"
                app:cpb_round_border="false" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:id="@+id/btnStartKick"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_foot"
                app:cardBackgroundColor="#F44336"
                app:cardCornerRadius="200dp" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:elevation="20dp"
                android:src="@drawable/ic_foot"
                app:tint="#fff" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kicks"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtKicksCount"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="-"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/first"
                        android:gravity="center"
                        android:layout_gravity="center_horizontal"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtFirstKickDate"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:text="-"
                        android:gravity="center"
                        android:layout_gravity="center_horizontal"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last"
                        android:gravity="center"
                        android:layout_gravity="center_horizontal"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtLastKickDate"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:text="-"
                        android:gravity="center"
                        android:layout_gravity="center_horizontal"/>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:id="@+id/actionLayout"
        android:orientation="horizontal"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:weightSum="2">

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnReset"
            android:layout_weight="1"
            android:text="@string/reset"
            app:cornerRadius="0dp"
            android:layout_marginEnd="4dp"
            android:textAllCaps="false"
            android:textColor="#ffff"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnComplete"
            app:cornerRadius="0dp"
            android:layout_weight="1"
            android:text="@string/complete"
            android:layout_marginStart="4dp"
            android:textAllCaps="false"
            android:textColor="#ffff"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>